<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/txt_titulo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_n1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/txt_n1"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo" />

    <EditText
        android:id="@+id/txt_n2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/txt_n2"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_n1" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="45dp"
        android:onClick="calcular"
        android:text="@string/btn_calcular"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="100dp"
        android:text="@string/txt_result"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_n2">

        <RadioButton
            android:id="@+id/rbtn_suma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_suma"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbtn_resta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_resta"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbtn_multi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_multi"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbtn_divi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_divi"
            android:textSize="24sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>